# oeis-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
Formula/: oeis-tui.rb
locales/: en.ftl  es.ftl  fr.ftl  ja.ftl  ko.ftl  zh.ftl
src/: app.rs  cli.rs  error.rs  main.rs
src/api/: cache.rs  client.rs  config.rs  mod.rs  models.rs  oeis_response_wrapper.rs
src/i18n/: mod.rs
src/ui/: about.rs  animation.rs  detail.rs  export.rs  graph.rs  help.rs  mod.rs  search.rs  settings.rs  theme.rs  webcam.rs
src/utils/: keybindings.rs  mod.rs  paths.rs  text.rs
