[package]
name = "oeis-tui"
version = "1.0.0"
edition = "2021"
authors = ["Wesley Hill <wesley@hakobaito.co.uk>"]
description = "A TUI and CLI for browsing the On-Line Encyclopedia of Integer Sequences (OEIS) in the terminal."
repository = "https://github.com/hako/oeis-tui"
homepage = "https://github.com/hako/oeis-tui"
license = "MIT"
exclude = ["*.gif"]
readme = "README.md"
keywords = ["tui", "oeis", "math", "terminal", "ratatui"]
categories = ["command-line-utilities"]

[[bin]]
name = "oeis"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"

tokio = { version = "1.40", features = ["rt", "macros", "time", "sync", "net", "io-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rusqlite = { version = "0.31", features = ["bundled"] }

csv = "1.3"

fluent = "0.16"
unic-langid = "0.9"

anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.1"
arboard = "3.4"
open = "5.3"
urlencoding = "2.1"
rand = "0.8"
dirs = "5.0"
regex = "1.11"
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "color"] }
anstyle = "1.0"
owo-colors = "4.0"

tachyonfx = "0.20.1"

[dev-dependencies]
mockito = "1.5"
tokio-test = "0.4"

[profile.release]
# Favor smaller binaries over peak speed.
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
